--- a/archive.html
+++ b/archive.html
@@ -11,13 +11,12 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.35/js/uikit.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.35/js/uikit-icons.min.js"></script>
   <!-- JQuery -->
-  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
+  <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.4.min.js"></script>
 </head>
 
 <body>
-  <!-- <h1 class="uk-heading-line uk-text-center"><span>PBDB Data Archives</span></h1> -->
 
-  <h1 class="uk-heading-line uk-text-center">PBDB Data Archives</h1>
+  <h1 class="uk-heading-line uk-text-center">Data Archives</h1>
 
   <div class="uk-section uk-section-muted">
     <div class="uk-container">
@@ -38,17 +37,16 @@
         item = '<li><h3 class="uk-accordion-title">';
         item += data[rec]['title'] + '</h3>';
         item += '<div class="uk-accordion-content">';
-        item += 'DOI: ' + data[rec]['doi'] + '<br>';
-        item += 'Date: ' + data[rec]['creation_date'] + '<br>';
-        item += 'Creator: ' + data[rec]['username'] + '<br>';
-        item += '<a href="' + data[rec]['uri'] + '">Original Data Service Request</a>' + '<br>';
-        item += 'Description : ' + data[rec]['description'] + '<br><br>';
+        item += '<b>DOI: </b>' + data[rec]['doi'] + '<br>';
+        item += '<b>Date: </b>' + data[rec]['creation_date'] + '<br>';
+        item += '<b>Creator: </b>' + data[rec]['username'] + '<br>';
+        item += '<b>Description : </b><p>' + data[rec]['description'] + '</p>';
         item += '<button class="uk-button uk-button-primary">Download</button>';
-        item += '<button class="uk-button uk-button-default">Update</button>';
+        item += '<button class="uk-button uk-button-default"><a href="' + data[rec]['uri'] + '">Update</button>';
         item += '</div></li>';
         
         $('#archiveList').append(item);
-        console.log(rec)
+        console.log(data[rec])
       }
     });
   })
