- updates for mmcclenn's DS routes

--- a/manage.html
+++ b/manage.html
@@ -24,9 +24,16 @@
             placeholder="Archive number"><br>
             <input type="text" name="doi" id="doi" placeholder="DOI">
         </form>
-        <center>
-            <br><button id="btn">Update metadata</button>
+        <p>
+        <!-- <br><button id="btn">Update metadata</button> -->
+            <button class="uk-button uk-button-primary" id="btn">update metadata</button>
+        </p>
+        </center>
     </div>
+    <br><br>
+    <center>
+        <a class="uk-link-muted" href="https://training.paleobiodb.org/classic/app/archive/list"> Return</a> to archive list</a>
+    </center>
 </body>
 
 
