--- a/manage.html
+++ b/manage.html
@@ -24,16 +24,14 @@
             placeholder="Archive number"><br>
             <input type="text" name="doi" id="doi" placeholder="DOI">
         </form>
-        <p>
-        <!-- <br><button id="btn">Update metadata</button> -->
-            <button class="uk-button uk-button-primary" id="btn">update metadata</button>
-        </p>
-        </center>
+        <center>
+            <br><button id="btn">Update metadata</button>
     </div>
-    <br><br>
-    <center>
-        <a class="uk-link-muted" href="https://training.paleobiodb.org/classic/app/archive/list"> Return</a> to archive list</a>
-    </center>
+	<br><br>
+	<center>
+	<a class="uk-link-muted"
+	    href="/classic/app/archive/list"> Go </a> to archive list</a>
+	</center>
 </body>
 
 
@@ -63,7 +61,7 @@
         $("#btn").click(function(){
             var archive_no = $("#archive_no").val();
             var doi = $("#doi").val();
-            var url = "https://training.paleobiodb.org/archives/update/" + archive_no;
+            var url = "https://paleobiodb.org/archives/update/" + archive_no;
 
             var updates = {doi: doi};
             var payload = JSON.stringify(updates)
@@ -75,7 +73,7 @@
 
             else{
                 $.ajax({
-                    url: 'https://training.paleobiodb.org/archives/update/' + archive_no,
+                    url: 'https://paleobiodb.org/archives/update/' + archive_no,
                     type: 'POST',
                     data: payload,
                     contentType: 'application/json; charset=utf-8',
