DOI pending status, reformatted list page

--- a/list.html
+++ b/list.html
@@ -40,12 +40,13 @@
             item += "    [DOI:  " + data[rec]['doi'] + "]";
         }
 
+        item += "</span><div style='float:right;'>";
+        item += "<i> (" + data[rec]['authors'] + ")</i>";
         item += "<a href='/classic/app/archive/view?id=";
         item += data[rec]['archive_no'] + "'>";
-        item += " -- View Details --";
+        item += "  - View Details ";
         item += "</a>";
-        item += "</span><div style='float:right;'>";
-        item += "<i> (" + data[rec]['authors'] + ")</i></li>";
+        item += "</li>";
 
         $('#archiveList').append(item);
       }
