Fix a bug that was improperly reporting archive URLs.

--- a/view.html
+++ b/view.html
@@ -50,7 +50,7 @@
 	  .success (function (data) {
 		  
           data = data[0];
-		  var uri = data['uri_path'] + "?" + data['uri_base'];
+		  var uri = data['uri_path'] + "?" + data['uri_args'];
 		  
 		  var apiCall = uri;
 		  var item;
