Committing changes that had been made locally. This should have been done when they were actually made, with a proper commit message then.

--- a/list.html
+++ b/list.html
@@ -41,10 +41,10 @@
         }
 
         item += "</span><div style='float:right;'>";
-        item += "<i> (" + data[rec]['authors'] + ")</i>";
+        item += "<i> (" + data[rec]['authors'] + ")</i> - ";
         item += "<a href='/classic/app/archive/view?id=";
         item += data[rec]['archive_no'] + "'>";
-        item += "  - View Details ";
+        item += "  View Details ";
         item += "</a>";
         item += "</li>";
 
